<resources>
    <!-- 앱 이름 -->
    <string name="app_name" translatable="false">KoApp!</string>

    <!-- 학습자 화면의 BNV 메뉴 -->
    <string name="bnv_menu_learner_1" translatable="false">홈</string>
    <string name="bnv_menu_learner_2" translatable="false">숙제</string>
    <string name="bnv_menu_learner_3" translatable="false">말하기연습</string>
    <string name="bnv_menu_learner_4" translatable="false">생활표현</string>
    <string name="bnv_menu_learner_5" translatable="false">노트</string>

    <!-- 말하기연습 -->
    <string name="speaking_family" translatable="false">가족</string>
    <string name="speaking_school" translatable="false">학교</string>
    <string name="speaking_weather_and_season" translatable="false">날씨와 계절</string>
    <string name="speaking_travel" translatable="false">여행</string>
    <string name="speaking_shopping" translatable="false">쇼핑</string>
    <string name="speaking_media_and_content" translatable="false">미디어와 콘텐츠</string>
    <string name="speaking_family_translate">가족</string>
    <string name="speaking_school_translate">학교</string>
    <string name="speaking_weather_and_season_translate">날씨와 계절</string>
    <string name="speaking_travel_translate">여행</string>
    <string name="speaking_shopping_translate">쇼핑</string>
    <string name="speaking_media_and_content_translate">미디어와 콘텐츠</string>

    <!-- 말하기연습 화면의 주제 -->
    <!-- 학교 -->
    <string name="speaking_school_teacher">선생님과 대화하기</string>
    <string name="speaking_school_friend">친구와 대화하기</string>
    <string-array name="speaking_school_subject">
        <item>@string/speaking_school_teacher</item>
        <item>@string/speaking_school_friend</item>
    </string-array>
    <!-- 미디어와 콘텐츠 -->
    <string name="speaking_media_and_content_kpop">좋아하는 K-POP 가수 말하기</string>
    <string name="speaking_media_and_content_kdrama">좋아하는 한국 드라마 말하기</string>
    <string name="speaking_media_and_content_game">좋아하는 게임 말하기</string>
    <string-array name="speaking_media_and_content_subject">
        <item>@string/speaking_media_and_content_kpop</item>
        <item>@string/speaking_media_and_content_kdrama</item>
        <item>@string/speaking_media_and_content_game</item>
    </string-array>

    <!-- 말하기 연습 화면의 주제별 상황 -->
    <!-- 학교 -->
    <string name="speaking_school_teacher_situation">학교 선생님과 상담을 하려고 해요. 자신의 학교 생활에 대하여 이야기해봅시다.</string>
    <string name="speaking_school_friend_situation">학교 친구와 쉬는시간에 대화를 하려고 해요. 친구와 사소한 이야기를 해봅시다.</string>
    <!-- 미디어와 콘텐츠 -->
    <string name="speaking_media_and_content_kpop_situation">자신이 좋아하는 K-POP 가수에 대하여 자유롭게 이야기해봅시다.</string>
    <string name="speaking_media_and_content_kdrama_situation">자신이 좋아하는 한국 드라마에 대하여 자유롭게 이야기해봅시다.</string>
    <string name="speaking_media_and_content_game_situation">자신이 좋아하는 게임에 대하여 자유롭게 이야기해봅시다.</string>

    <!-- 말하기 연습 화면의 주제별 상황 팁 -->
    <!-- 상황 팁 - 학교 -->
    <string name="speaking_school_teacher_tip_1">학교 생활 적응도</string>
    <string name="speaking_school_teacher_tip_2">한국 생활 적응도</string>
    <string name="speaking_school_teacher_tip_3">한국어 수업을 들을 때의 어려움</string>
    <string name="speaking_school_teacher_tip_4">친구를 사귀는 것에 대한 어려움</string>
    <string name="speaking_school_teacher_tip_5">구체적인 장래희망 계획</string>
    <string-array name="speaking_school_teacher_tip">
        <item>@string/speaking_school_teacher_tip_1</item>
        <item>@string/speaking_school_teacher_tip_2</item>
        <item>@string/speaking_school_teacher_tip_3</item>
        <item>@string/speaking_school_teacher_tip_4</item>
        <item>@string/speaking_school_teacher_tip_5</item>
    </string-array>
    <string name="speaking_school_friend_tip_1">숙제 준비 여부</string>
    <string name="speaking_school_friend_tip_2">내일 챙겨야 하는 준비물</string>
    <string name="speaking_school_friend_tip_3">취미와 관심사</string>
    <string name="speaking_school_friend_tip_4">한국어 공부의 어려움</string>
    <string name="speaking_school_friend_tip_5">구체적인 장래희망 계획</string>
    <string-array name="speaking_school_friend_tip">
        <item>@string/speaking_school_friend_tip_1</item>
        <item>@string/speaking_school_friend_tip_2</item>
        <item>@string/speaking_school_friend_tip_3</item>
        <item>@string/speaking_school_friend_tip_4</item>
        <item>@string/speaking_school_friend_tip_5</item>
    </string-array>
    <!-- 상황 팁 - 미디어와 콘텐츠 -->
    <string name="speaking_media_and_content_kpop_tip_1">좋아하는 K-POP 가수</string>
    <string name="speaking_media_and_content_kpop_tip_2">좋아하는 노래</string>
    <string name="speaking_media_and_content_kpop_tip_3">굿즈에 대한 지식</string>
    <string name="speaking_media_and_content_kpop_tip_4">굿즈를 구매한 경험</string>
    <string name="speaking_media_and_content_kpop_tip_5">덕질에 대한 지식</string>
    <string name="speaking_media_and_content_kpop_tip_6">덕질을 해본 경험</string>
    <string name="speaking_media_and_content_kpop_tip_7">콘서트장 방문 경험</string>
    <string-array name="speaking_media_and_content_kpop_tip">
        <item>@string/speaking_media_and_content_kpop_tip_1</item>
        <item>@string/speaking_media_and_content_kpop_tip_2</item>
        <item>@string/speaking_media_and_content_kpop_tip_3</item>
        <item>@string/speaking_media_and_content_kpop_tip_4</item>
        <item>@string/speaking_media_and_content_kpop_tip_5</item>
        <item>@string/speaking_media_and_content_kpop_tip_6</item>
        <item>@string/speaking_media_and_content_kpop_tip_7</item>
    </string-array>
    <string name="speaking_media_and_content_kdrama_tip_1">좋아하는 드라마</string>
    <string name="speaking_media_and_content_kdrama_tip_2">좋아하는 영화</string>
    <string name="speaking_media_and_content_kdrama_tip_3">좋아하는 드라마 또는 영화 장르</string>
    <string name="speaking_media_and_content_kdrama_tip_4">좋아하는 배우</string>
    <string name="speaking_media_and_content_kdrama_tip_5">좋아하는 이유</string>
    <string name="speaking_media_and_content_kdrama_tip_6">영화관 방문 경험</string>
    <string name="speaking_media_and_content_kdrama_tip_7">영화관 갈 때 먹는 음식</string>
    <string name="speaking_media_and_content_kdrama_tip_8">영화제에 대한 정보</string>
    <string-array name="speaking_media_and_content_kdrama_tip">
        <item>@string/speaking_media_and_content_kdrama_tip_1</item>
        <item>@string/speaking_media_and_content_kdrama_tip_2</item>
        <item>@string/speaking_media_and_content_kdrama_tip_3</item>
        <item>@string/speaking_media_and_content_kdrama_tip_4</item>
        <item>@string/speaking_media_and_content_kdrama_tip_5</item>
        <item>@string/speaking_media_and_content_kdrama_tip_6</item>
        <item>@string/speaking_media_and_content_kdrama_tip_7</item>
        <item>@string/speaking_media_and_content_kdrama_tip_8</item>
    </string-array>
    <string name="speaking_media_and_content_game_tip_1">좋아하는 게임</string>
    <string name="speaking_media_and_content_game_tip_2">게임을 좋아하는 이유</string>
    <string name="speaking_media_and_content_game_tip_3">좋아하는 게임 장르</string>
    <string name="speaking_media_and_content_game_tip_4">하루에 게임하는 시간</string>
    <string name="speaking_media_and_content_game_tip_5">좋아하는 프로게이머</string>
    <string name="speaking_media_and_content_game_tip_6">게임 아이템 구매 경험</string>
    <string-array name="speaking_media_and_content_game_tip">
        <item>@string/speaking_media_and_content_game_tip_1</item>
        <item>@string/speaking_media_and_content_game_tip_2</item>
        <item>@string/speaking_media_and_content_game_tip_3</item>
        <item>@string/speaking_media_and_content_game_tip_4</item>
        <item>@string/speaking_media_and_content_game_tip_5</item>
        <item>@string/speaking_media_and_content_game_tip_6</item>
    </string-array>

    <!-- 말하기 연습 -> 상황 -->
    <string name="situation">상황</string>
    <string name="conversation_tip">대화 Tip</string>
    <string name="practice">연습하기</string>

    <!-- 말하기 연습 STT 관련 -->
    <string name="speaking_recording_tooltip">잘 듣고 있어요</string>
    <string name="speaking_recording_analysis">분석 중입니다...</string>

    <!-- 말하기 연습 힌트 -->
    <string name="hint" translatable="false">💡 힌트</string>
</resources>