<?xml version="1.0" encoding="utf-8"?>
<!-- 학습자 화면의 말하기 연습 상황 화면 -->
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/Gray_100"
        tools:context=".view.main.learner.speaking.SpeakingSituationFragment">

        <include
            android:id="@+id/toolbar_speaking_situation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/toolbar_sub"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/situation"
                    style="@style/Korean_H4"
                    android:textColor="@color/Gray_500"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"/>

                <TextView
                    android:id="@+id/tv_speaking_situation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Korean_SubTitle"
                    android:textColor="@color/Black"
                    tools:text="@string/speaking_media_and_content_kpop_situation"
                    android:paddingTop="24dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="24dp"
                    android:background="@drawable/all_radius_16_box"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/conversation_tip"
                    style="@style/Korean_H4"
                    android:textColor="@color/Gray_500"
                    android:layout_marginTop="32dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_speaking_situation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/all_radius_16_box"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    tools:listitem="@layout/item_speaking_situation"
                    tools:itemCount="3"
                    android:overScrollMode="never"
                    android:nestedScrollingEnabled="false"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    app:cardElevation="16dp"
                    android:outlineSpotShadowColor="#33919699"
                    app:cardCornerRadius="40dp">

                    <Button
                        android:id="@+id/btn_speaking_practice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/practice"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        style="@style/WideButtonEnableStyle"/>
                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="160dp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>